...
 * @param websearch 
 */
@Serializable

data class PermissionConfig (

    @SerialName(value = "bash")
    val bash: PermissionRuleConfig? = null,

    @Contextual @SerialName(value = "doom_loop")
    val doomLoop: PermissionActionConfig? = null,

    @SerialName(value = "edit")
...
